# snake-llm

./: Cargo.toml  README.md
src/: board.rs  board_crossterm.rs  board_ratatui.rs  client.rs  config.rs  direction.rs  events.rs  game.rs  main.rs  models.rs  point.rs  snake.rs
src/board/: draw.rs
src/board/draw/: mod.rs  snake_shape.rs
src/client/: gemini.rs  groq.rs  models.rs  ollama.rs
