[package]
name = "snake-llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
figment = { version = "0.10.18", features = ["yaml"] }
log = "0.4.21"
rand = "0.8.5"
ratatui = "0.26.2"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = "1.0.199"
serde_derive = "1.0.199"
serde_json = "1.0.116"
tui-logger = { version = "0.11.1", features = ["crossterm"] }
